--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ matplotlib==3.9.2
 plotly==5.24.1
 requests==2.32.3
 spacy==3.7.2
-https://github.com/explosion/spacy-models/releases/download/en_core_sci_sm-3.7.2/en_core_sci_sm-3.7.2.tar.gz
+en-core-sci-sm==3.7.2
 
 gunicorn
