--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Jinja2==3.1.4
 itsdangerous==2.2.0
 Werkzeug==3.0.6
 click==8.1.7
-numpy==2.1.2
+numpy==1.26.4
 pandas==2.2.3
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -12,5 +12,6 @@ matplotlib==3.9.2
 plotly==5.24.1
 requests==2.32.3
 spacy==3.7.2
+protobuf==4.25.4
 
 gunicorn
